--- a/markup/index.gmi
+++ b/markup/index.gmi
@@ -2,7 +2,7 @@
 
 Welcome, have a nice stay. This website focuses on being simple yet efficient for providing information about me, programming, linux, automobiles and technology.
 
-The docs section is mostly for my personal use; however, you might find something useful there.
+The doc section is mostly for my personal use; however, you might find something useful there.
 
 > Debugging is twice as hard as writing the code in the first place. Therefore, if you write the code as cleverly as possible you are, by definition, not smart enough to debug it.
 >
@@ -12,9 +12,10 @@ _
 
 ## Other Info:
 
-* This is an ad and tracker free static website with no JavaScript.
-* Source can be found at- https://github.com/jethi/website
-* Source code of this website is licensed under the ISC license.
+* This is an ad and tracker free static website with no JavaScript
+* Initially deployed on 1 Nov 2020
+* Source can be found at- https://github.com/jethi/my-website
+* Source code of this website is licensed under the ISC license
 
 ^ Learn Humility and have Gratitude 🌱
 
